--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -23,7 +23,8 @@
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.14</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.14</spring-cloud-dataflow-apps-docs-plugin.version>
         <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.14</spring-cloud-dataflow-apps-metadata-plugin.version>
-        <java-cfenv-boot.version>2.4.0</java-cfenv-boot.version>
+        <java-cfenv-boot.version>3.2.0</java-cfenv-boot.version>
+        <spring-cloud-services.version>4.0.5</spring-cloud-services.version>
     </properties>
 
     <modules>
@@ -262,7 +263,7 @@
                                         <dependency>
                                             <groupId>io.pivotal.spring.cloud</groupId>
                                             <artifactId>spring-cloud-services-starter-config-client</artifactId>
-                                            <version>3.2.0.RELEASE</version>
+                                            <version>${spring-cloud-services.version}</version>
                                         </dependency>
                                     </dependencies>
                                 </maven>
